@@ -8,7 +8,6 @@ import pl.example.infrastructure.database.repository.jpa.RestaurantStreetJpaRepo
 import pl.example.infrastructure.database.repository.mapper.RestaurantStreetEntityMapper;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Repository
 @AllArgsConstructor
@@ -23,14 +22,9 @@ public class RestaurantStreetRepository implements RestaurantStreetDAO {
     public List<RestaurantStreet> findAll() {
         return restaurantStreetJpaRepository.findAll().stream()
                 .map(restaurantStreetEntityMapper::mapFromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @Override
-    public List<RestaurantStreet> findAllByRestaurantId(Integer id) {
-        return restaurantStreetJpaRepository.findAllByRestaurantId(id).stream()
-                .map(restaurantStreetEntityMapper::mapFromEntity).collect(Collectors.toList());
-    }
 
     @Override
     public RestaurantStreet save(RestaurantStreet restaurantStreet) {
